Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E0.22269A|din=03.yaml
+++ b/tests/test_cases/2021/commands/7E0.22269A|din=03.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DPF_DIFF_P_RAW_VALUE_1: -6
   response: 7E80562269AFFFA
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_DIFF_P_RAW_VALUE_1: -4
+  response: 7E80562269AFFFC
