--- a/tests/test_cases/2021/commands/7E0.7E8.2214C8.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2214C8.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.7E8.2214C8
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_PRE_INJ_2_START: 0
+  response: 7E8056214C80000
+- expected_values:
     VOLKSWAGEN_PQ35_PRE_INJ_2_START: 7.38
   response: 7E8056214C80171
 - expected_values:
