--- a/tests/test_cases/2021/commands/7E0.7E8.22181A.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22181A.yaml
@@ -7,5 +7,8 @@ test_cases:
     VOLKSWAGEN_PQ35_BOOST_P_BEFORE_THROTTLE_CALCULATED_ACT: 9700000
   response: 7E80562181A0F28
 - expected_values:
+    VOLKSWAGEN_PQ35_BOOST_P_BEFORE_THROTTLE_CALCULATED_ACT: 10900000
+  response: 7E80562181A1108
+- expected_values:
     VOLKSWAGEN_PQ35_BOOST_P_BEFORE_THROTTLE_CALCULATED_ACT: 17252500
   response: 7E80562181A1AF5
