--- a/tests/test_cases/2021/commands/7E1.7E9.223824.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223824.yaml
@@ -1,11 +1,11 @@
 command_id: 7E1.7E9.223824
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_ACTUAL: 0.22
+  response: '7E9056238241600'
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_ACTUAL: 15.73
   response: '7E9056238242506'
 - expected_values:
-    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_ACTUAL: 1.22
-  response: 7E9056238247A00
-- expected_values:
-    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_ACTUAL: 2.5
-  response: 7E905623824FA00
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_ACTUAL: 5.09
+  response: 7E905623824FD01
