--- a/tests/test_cases/2021/commands/7E0.7E8.221301.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221301.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_LIM_SMOKE: 332.8
   response: 7E8056213010D00
+- expected_values:
+    VOLKSWAGEN_PQ35_LIM_SMOKE: 1000
+  response: '7E8056213012710'
