--- a/tests/test_cases/2021/commands/7E0.7E8.22162D.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22162D.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_FUEL_T: 8.5
   response: 7E80562162D0B00
+- expected_values:
+    VOLKSWAGEN_PQ35_FUEL_T: 47.8
+  response: 7E80562162D0C89
