--- a/tests/test_cases/2021/commands/7E1.7E9.221083.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221083.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G1: -2.56
   response: 7E90562108300FF
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G1: -2.55
+  response: 7E90562108301FF
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G1: -2.49
   response: 7E90562108307FF
 - expected_values:
@@ -18,6 +21,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G1: -2.61
   response: 7E905621083FBFE
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G1: -2.59
+  response: 7E905621083FDFE
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G1: -2.57
   response: 7E905621083FFFE
