--- a/tests/test_cases/2021/commands/7E1.7E9.22382A.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22382A.yaml
@@ -7,5 +7,8 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_CMD: 1200
   response: 7E90562382AE02E
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_CMD: 100
+  response: 7E90562382AE803
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_VALVE_I_CMD: 358
   response: 7E90562382AFC0D
