--- a/tests/test_cases/2021/commands/7E0.7E8.221AD7.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221AD7.yaml
@@ -4,5 +4,11 @@ test_cases:
     VOLKSWAGEN_MQB_EXH_TEMP_CTRL_AFTER_CAT_MODEL_ERR: -40.1
   response: 7E805621AD7091A
 - expected_values:
+    VOLKSWAGEN_MQB_EXH_TEMP_CTRL_AFTER_CAT_MODEL_ERR: -27.1
+  response: 7E805621AD7099C
+- expected_values:
+    VOLKSWAGEN_MQB_EXH_TEMP_CTRL_AFTER_CAT_MODEL_ERR: -24.8
+  response: 7E805621AD709B3
+- expected_values:
     VOLKSWAGEN_MQB_EXH_TEMP_CTRL_AFTER_CAT_MODEL_ERR: 0
   response: 7E805621AD70AAB
