--- a/tests/test_cases/2021/commands/7E1.7E9.223826.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223826.yaml
@@ -1,14 +1,11 @@
 command_id: 7E1.7E9.223826
 test_cases:
 - expected_values:
-    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 387
-  response: 7E9056238261E0F
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 0
+  response: '7E9056238260000'
 - expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 1200
   response: 7E905623826E02E
-- expected_values:
-    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 100
-  response: 7E905623826E803
 - expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_CMD: 382.3
   response: 7E905623826EF0E
