--- a/tests/test_cases/2021/commands/7E1.7E9.223835.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223835.yaml
@@ -1,14 +1,11 @@
 command_id: 7E1.7E9.223835
 test_cases:
 - expected_values:
-    VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_ACTUAL: 333
-  response: 7E905623835020D
+    VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_ACTUAL: 0
+  response: '7E9056238350000'
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_ACTUAL: 609
   response: 7E905623835CA17
-- expected_values:
-    VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_ACTUAL: 48
-  response: 7E905623835E001
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_ACTUAL: 50
   response: 7E905623835F401
