--- a/tests/test_cases/2021/commands/7E0.7E8.221798.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221798.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.7E8.221798
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_CHARGE_AIR_T_TUBROCHARGER_OUTLET_CALCULATED: 32.9
+  response: 7E8056217980BF4
+- expected_values:
     VOLKSWAGEN_MQB_CHARGE_AIR_T_TUBROCHARGER_OUTLET_CALCULATED: 33.2
   response: 7E8056217980BF7
 - expected_values:
