--- a/tests/test_cases/2021/commands/7E0.7E8.221AC4.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221AC4.yaml
@@ -6,3 +6,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DPF_SERVICE_REGEN_I_DURATION: 49.28
   response: 7E805621AC4004D
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_SERVICE_REGEN_I_DURATION: 446.72
+  response: 7E805621AC402BA
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_SERVICE_REGEN_I_DURATION: 619.52
+  response: 7E805621AC403C8
