--- a/tests/test_cases/2021/commands/7E0.7E8.221ACE.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221ACE.yaml
@@ -4,5 +4,11 @@ test_cases:
     VOLKSWAGEN_MQB_DPF_STATISTICS_REGEN_TIME_SLICE_NOT_POSS_IN_CHARGE_CYCLE: 0
   response: 7E804621ACE00
 - expected_values:
+    VOLKSWAGEN_MQB_DPF_STATISTICS_REGEN_TIME_SLICE_NOT_POSS_IN_CHARGE_CYCLE: 0.18748
+  response: 7E804621ACE60
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_STATISTICS_REGEN_TIME_SLICE_NOT_POSS_IN_CHARGE_CYCLE: 0.21873
+  response: 7E804621ACE70
+- expected_values:
     VOLKSWAGEN_MQB_DPF_STATISTICS_REGEN_TIME_SLICE_NOT_POSS_IN_CHARGE_CYCLE: 0.28122
   response: 7E804621ACE90
