--- a/tests/test_cases/2021/commands/7E1.7E9.223820.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223820.yaml
@@ -7,5 +7,8 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_P_CMD: 25
   response: 7E905623820C409
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_P_CMD: 7.3
+  response: 7E905623820DA02
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_P_CMD: 2.5
   response: 7E905623820FA00
