--- a/tests/test_cases/2021/commands/7E1.7E9.221059.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221059.yaml
@@ -16,5 +16,8 @@ test_cases:
     VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_1_POS: 4.23
   response: 7E905621059A701
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_1_POS: 4.24
+  response: 7E905621059A801
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_1_POS: 4.25
   response: 7E905621059A901
