--- a/tests/test_cases/2021/commands/7E1.7E9.2210AF.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210AF.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_GR: -1.29
   response: 7E9056210AF7FFF
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_GR: -1.27
+  response: 7E9056210AF81FF
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_GR: -1.24
   response: 7E9056210AF84FF
 - expected_values:
