--- a/tests/test_cases/2021/commands/7E1.7E9.2210C9.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210C9.yaml
@@ -18,3 +18,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_SUCCESSFUL_ADAPTS_COUNTER: 1922
   response: 7E9056210C98207
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_SUCCESSFUL_ADAPTS_COUNTER: 1924
+  response: 7E9056210C98407
