--- a/tests/test_cases/2021/commands/7E1.7E9.2210CA.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210CA.yaml
@@ -18,3 +18,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_KISS_POINT_PART_1_ODO_READING: 84370
   response: 7E9056210CAF520
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_KISS_POINT_PART_1_ODO_READING: 84410
+  response: 7E9056210CAF920
