Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E1.7E9.2210AF.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210AF.yaml
@@ -16,6 +16,9 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_GR: -1.18
   response: 7E9056210AF8AFF
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_GR: -1.17
+  response: 7E9056210AF8BFF
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_GR: -1.13
   response: 7E9056210AF8FFF
 - expected_values:
