--- a/tests/test_cases/2021/commands/7E1.7E9.2238EB.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2238EB.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_ACTUAL_P: -0.03
   response: 7E9056238EBFDFF
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_ACTUAL_P: 2.55
+  response: 7E9056238EBFF00
