--- a/tests/test_cases/2021/commands/7E1.7E9.2210AE.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210AE.yaml
@@ -24,3 +24,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GANGSTELLER_D_ADAPT_NEUTRALPOS: 0.65
   response: 7E9056210AE4100
+- expected_values:
+    VOLKSWAGEN_PQ35_GANGSTELLER_D_ADAPT_NEUTRALPOS: 0.66
+  response: 7E9056210AE4200
