Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E1.7E9.221077.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221077.yaml
@@ -8,6 +8,9 @@ test_cases:
   response: '7E9056210770704'
 - expected_values:
     VOLKSWAGEN_MQB_DQ200_CLUTCH_2_FRICTION_VALUE_CORRECTION_FACTOR: 100
+  response: 7E9056210770B04
+- expected_values:
+    VOLKSWAGEN_MQB_DQ200_CLUTCH_2_FRICTION_VALUE_CORRECTION_FACTOR: 100
   response: 7E9056210770E08
 - expected_values:
     VOLKSWAGEN_MQB_DQ200_CLUTCH_2_FRICTION_VALUE_CORRECTION_FACTOR: 100
