--- a/tests/test_cases/2021/commands/7E1.7E9.2210AE.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210AE.yaml
@@ -22,6 +22,9 @@ test_cases:
     VOLKSWAGEN_PQ35_GANGSTELLER_D_ADAPT_NEUTRALPOS: 0.63
   response: 7E9056210AE3F00
 - expected_values:
+    VOLKSWAGEN_PQ35_GANGSTELLER_D_ADAPT_NEUTRALPOS: 0.64
+  response: 7E9056210AE4000
+- expected_values:
     VOLKSWAGEN_PQ35_GANGSTELLER_D_ADAPT_NEUTRALPOS: 0.65
   response: 7E9056210AE4100
 - expected_values:
