--- a/tests/test_cases/2021/commands/7E1.7E9.2210C9.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210C9.yaml
@@ -21,3 +21,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_SUCCESSFUL_ADAPTS_COUNTER: 1924
   response: 7E9056210C98407
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_SUCCESSFUL_ADAPTS_COUNTER: 1925
+  response: 7E9056210C98507
