--- a/tests/test_cases/2021/commands/7E0.7E8.22111F.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22111F.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_PQ35_PREHEAT_T: 0
   response: 7E80562111F0000
 - expected_values:
+    VOLKSWAGEN_PQ35_PREHEAT_T: 1200
+  response: 7E80562111F000C
+- expected_values:
     VOLKSWAGEN_PQ35_PREHEAT_T: 1500
   response: 7E80562111F000F
 - expected_values:
