--- a/tests/test_cases/2021/commands/7E1.7E9.22106C.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22106C.yaml
@@ -1,6 +1,9 @@
 command_id: 7E1.7E9.22106C
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_0_POS: 2.56
+  response: 7E90562106C0001
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_0_POS: 2.57
   response: 7E90562106C0101
 - expected_values:
