--- a/tests/test_cases/2021/commands/7E1.7E9.2210A1.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210A1.yaml
@@ -18,3 +18,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G7: -1.62
   response: 7E9056210A15EFF
+- expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G7: -1.61
+  response: 7E9056210A15FFF
