--- a/tests/test_cases/2021/commands/7E1.7E9.2210EA.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210EA.yaml
@@ -18,3 +18,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_SUCCESSFUL_ADAPTS_COUNTER: 1850
   response: 7E9056210EA3A07
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_SUCCESSFUL_ADAPTS_COUNTER: 1851
+  response: 7E9056210EA3B07
