--- a/tests/test_cases/2021/commands/7E1.7E9.222110.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.222110.yaml
@@ -1,8 +1,8 @@
 command_id: 7E1.7E9.222110
 test_cases:
 - expected_values:
-    VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 3155
-  response: 7E9056221100C53
+    VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 2057
+  response: '7E9056221100809'
 - expected_values:
     VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 26710
   response: '7E9056221106856'
