--- a/tests/test_cases/2021/commands/7E1.7E9.223839.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223839.yaml
@@ -1,14 +1,11 @@
 command_id: 7E1.7E9.223839
 test_cases:
 - expected_values:
-    VOLKSWAGEN_MQB_TCM_CLUTCH_2_ACTUAL_TORQUE: 143.2
-  response: 7E905623839300B
+    VOLKSWAGEN_MQB_TCM_CLUTCH_2_ACTUAL_TORQUE: 0
+  response: '7E9056238390000'
 - expected_values:
     VOLKSWAGEN_MQB_TCM_CLUTCH_2_ACTUAL_TORQUE: -9.5
   response: 7E90562383942FF
-- expected_values:
-    VOLKSWAGEN_MQB_TCM_CLUTCH_2_ACTUAL_TORQUE: 5.3
-  response: 7E9056238396A00
 - expected_values:
     VOLKSWAGEN_MQB_TCM_CLUTCH_2_ACTUAL_TORQUE: -13
   response: 7E905623839FCFE
