--- a/tests/test_cases/2021/commands/7E1.7E9.2210C9.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210C9.yaml
@@ -24,3 +24,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_SUCCESSFUL_ADAPTS_COUNTER: 1925
   response: 7E9056210C98507
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_SUCCESSFUL_ADAPTS_COUNTER: 1926
+  response: 7E9056210C98607
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_SUCCESSFUL_ADAPTS_COUNTER: 1927
+  response: 7E9056210C98707
