--- a/tests/test_cases/2021/commands/7E0.7E8.2210DD.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210DD.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.7E8.2210DD
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_INJ_3_RAIL_P_3: 0.0032
+  response: 7E8056210DD0040
+- expected_values:
     VOLKSWAGEN_PQ35_INJ_3_RAIL_P_3: 0.0036
   response: 7E8056210DD0048
 - expected_values:
