--- a/tests/test_cases/2021/commands/7E1.7E9.2210EA.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210EA.yaml
@@ -21,3 +21,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_SUCCESSFUL_ADAPTS_COUNTER: 1851
   response: 7E9056210EA3B07
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_SUCCESSFUL_ADAPTS_COUNTER: 1852
+  response: 7E9056210EA3C07
