--- a/tests/test_cases/2021/commands/7E1.7E9.2210EB.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210EB.yaml
@@ -1,6 +1,9 @@
 command_id: 7E1.7E9.2210EB
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_KISS_POINT_PART_1_ODO_READING: 84480
+  response: 7E9056210EB0021
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_KISS_POINT_PART_1_ODO_READING: 84080
   response: 7E9056210EBD820
 - expected_values:
