--- a/tests/test_cases/2021/commands/7E0.7E8.221069.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221069.yaml
@@ -10,5 +10,5 @@ test_cases:
     VOLKSWAGEN_PQ35_ENG_START_QTY: 15.3
   response: 7E80562106905FA
 - expected_values:
-    VOLKSWAGEN_PQ35_ENG_START_QTY: 22.83
-  response: 7E80562106908EB
+    VOLKSWAGEN_PQ35_ENG_START_QTY: 23.88
+  response: '7E8056210690954'
