--- a/tests/test_cases/2021/commands/7E0.7E8.22111F.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22111F.yaml
@@ -10,6 +10,9 @@ test_cases:
     VOLKSWAGEN_PQ35_PREHEAT_T: 1500
   response: 7E80562111F000F
 - expected_values:
+    VOLKSWAGEN_PQ35_PREHEAT_T: 2000
+  response: 7E80562111F0014
+- expected_values:
     VOLKSWAGEN_PQ35_PREHEAT_T: 2200
   response: 7E80562111F0016
 - expected_values:
