--- a/tests/test_cases/2021/commands/7E0.7E8.22181A.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22181A.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_PQ35_BOOST_P_BEFORE_THROTTLE_CALCULATED_ACT: 9192500
   response: 7E80562181A0E5D
 - expected_values:
+    VOLKSWAGEN_PQ35_BOOST_P_BEFORE_THROTTLE_CALCULATED_ACT: 9587500
+  response: 7E80562181A0EFB
+- expected_values:
     VOLKSWAGEN_PQ35_BOOST_P_BEFORE_THROTTLE_CALCULATED_ACT: 10900000
   response: 7E80562181A1108
 - expected_values:
