--- a/tests/test_cases/2021/commands/7E1.7E9.22388B.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22388B.yaml
@@ -27,3 +27,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_DRIVE_CYCLES_COUNTER: 1980
   response: 7E90562388BBC07
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_DRIVE_CYCLES_COUNTER: 1981
+  response: 7E90562388BBD07
