Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E1.7E9.2210CC.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210CC.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_FAILED_ADAPTS_COUNTER: 0
   response: 7E9056210CC0000
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_FAILED_ADAPTS_COUNTER: 256
+  response: 7E9056210CC0100
