--- a/tests/test_cases/2021/commands/7E1.7E9.223803.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223803.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_BRAKE_P: 8.4
   response: '7E9056238034803'
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_BRAKE_P: 6.6
+  response: '7E9056238039402'
+- expected_values:
     VOLKSWAGEN_MQB_TCM_BRAKE_P: 27.3
   response: 7E905623803AA0A
 - expected_values:
