--- a/tests/test_cases/2021/commands/7E0.7E8.221ABE.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221ABE.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DPF_SOOT_MASS_MEASURED: -2.55
   response: 7E805621ABEFF01
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_SOOT_MASS_MEASURED: -1.93
+  response: 7E805621ABEFF3F
