--- a/tests/test_cases/2021/commands/7E1.7E9.22106C.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22106C.yaml
@@ -10,5 +10,8 @@ test_cases:
     VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_0_POS: 2.58
   response: 7E90562106C0201
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_0_POS: 2.54
+  response: 7E90562106CFE00
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_BASIC_CHAR_POINT_0_POS: 2.55
   response: 7E90562106CFF00
