--- a/tests/test_cases/2021/commands/7E0.7E8.2210F1.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210F1.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_DPF_DIFF_P_OFFSET: -4
   response: 7E8056210F1FFFC
+- expected_values:
+    VOLKSWAGEN_PQ35_DPF_DIFF_P_OFFSET: -3
+  response: 7E8056210F1FFFD
