--- a/tests/test_cases/2021/commands/7E1.7E9.2210A1.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210A1.yaml
@@ -10,6 +10,9 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G7: -1.68
   response: 7E9056210A158FF
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G7: -1.67
+  response: 7E9056210A159FF
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_G7: -1.65
   response: 7E9056210A15BFF
 - expected_values:
