--- a/tests/test_cases/2021/commands/7E1.7E9.2210AF.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210AF.yaml
@@ -10,6 +10,9 @@ test_cases:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_GR: -1.24
   response: 7E9056210AF84FF
 - expected_values:
+    VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_GR: -1.23
+  response: 7E9056210AF85FF
+- expected_values:
     VOLKSWAGEN_PQ35_GEAR_ACTUATOR_ADAPT_SYNCHRO_POS_GR: -1.22
   response: 7E9056210AF86FF
 - expected_values:
