--- a/tests/test_cases/2021/commands/7E1.7E9.2210EB.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2210EB.yaml
@@ -7,6 +7,9 @@ test_cases:
     VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_KISS_POINT_PART_1_ODO_READING: 84560
   response: 7E9056210EB0821
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_KISS_POINT_PART_1_ODO_READING: 84630
+  response: 7E9056210EB0F21
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_ADAPT_KISS_POINT_PART_1_ODO_READING: 84080
   response: 7E9056210EBD820
 - expected_values:
