Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E1.7E9.221062.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221062.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_FRICTION_VALUE_CORRECTION_FACTOR: 100
   response: '7E9056210628809'
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_FRICTION_VALUE_CORRECTION_FACTOR: 100
+  response: 7E905621062C905
