--- a/tests/test_cases/2021/commands/7E0.7E8.22111F.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22111F.yaml
@@ -16,5 +16,8 @@ test_cases:
     VOLKSWAGEN_PQ35_PREHEAT_T: 2200
   response: 7E80562111F0016
 - expected_values:
+    VOLKSWAGEN_PQ35_PREHEAT_T: 2300
+  response: 7E80562111F0017
+- expected_values:
     VOLKSWAGEN_PQ35_PREHEAT_T: 2500
   response: 7E80562111F0019
