--- a/tests/test_cases/2021/commands/7E1.7E9.221077.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221077.yaml
@@ -21,3 +21,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DQ200_CLUTCH_2_FRICTION_VALUE_CORRECTION_FACTOR: 0
   response: '7E9056210778405'
+- expected_values:
+    VOLKSWAGEN_MQB_DQ200_CLUTCH_2_FRICTION_VALUE_CORRECTION_FACTOR: 0
+  response: '7E9056210779504'
