--- a/tests/test_cases/2021/commands/7E0.7E8.222AE1.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.222AE1.yaml
@@ -7,5 +7,8 @@ test_cases:
     VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_MODELED: 10.8
   response: 7E805622AE113F4
 - expected_values:
-    VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_MODELED: 43.6
-  response: 7E805622AE1153C
+    VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_MODELED: 10.9
+  response: 7E805622AE113F5
+- expected_values:
+    VOLKSWAGEN_MQB_EXHAUST_GAS_RECIRCULATION_2_FILTER_P_LOSS_MODELED: 42.8
+  response: 7E805622AE11534
