--- a/tests/test_cases/2021/commands/7E1.7E9.221017.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221017.yaml
@@ -1,8 +1,8 @@
 command_id: 7E1.7E9.221017
 test_cases:
 - expected_values:
-    VOLKSWAGEN_PQ35_ROAD_RESISTANCE: -6.202
-  response: '7E90462101766'
+    VOLKSWAGEN_PQ35_ROAD_RESISTANCE: -13.174
+  response: 7E9046210174A
 - expected_values:
     VOLKSWAGEN_PQ35_ROAD_RESISTANCE: 3.509
   response: 7E9046210178D
