--- a/tests/test_cases/2021/commands/7E1.7E9.221059.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221059.yaml
@@ -1,6 +1,9 @@
 command_id: 7E1.7E9.221059
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_1_POS: 4.17
+  response: 7E905621059A101
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_1_POS: 4.19
   response: 7E905621059A301
 - expected_values:
