--- a/tests/test_cases/2021/commands/7E1.7E9.223871.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223871.yaml
@@ -16,6 +16,9 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_IDLE_RPM: 380
   response: 7E9056238717C01
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPECIFIED_IDLE_RPM: 640
+  response: '7E9056238718002'
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_IDLE_RPM: 440
   response: 7E905623871B801
 - expected_values:
