Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E1.7E9.223803.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223803.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_BRAKE_P: 8.4
   response: '7E9056238034803'
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_BRAKE_P: 3.3
+  response: 7E9056238034A01
+- expected_values:
     VOLKSWAGEN_MQB_TCM_BRAKE_P: 6
   response: '7E9056238035802'
 - expected_values:
@@ -12,6 +15,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_BRAKE_P: 27.3
   response: 7E905623803AA0A
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_BRAKE_P: 4.5
+  response: 7E905623803C201
 - expected_values:
     VOLKSWAGEN_MQB_TCM_BRAKE_P: -0.3
   response: 7E905623803E2FF
