--- a/tests/test_cases/2021/commands/7E1.7E9.22388C.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22388C.yaml
@@ -1,6 +1,9 @@
 command_id: 7E1.7E9.22388C
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_IGNITION_CYCLES: 512
+  response: 7E90562388C0002
+- expected_values:
     VOLKSWAGEN_MQB_TCM_IGNITION_CYCLES: 486
   response: 7E90562388CE601
 - expected_values:
