Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E1.7E9.221077.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221077.yaml
@@ -19,6 +19,9 @@ test_cases:
     VOLKSWAGEN_MQB_DQ200_CLUTCH_2_FRICTION_VALUE_CORRECTION_FACTOR: 100
   response: 7E9056210772C04
 - expected_values:
+    VOLKSWAGEN_MQB_DQ200_CLUTCH_2_FRICTION_VALUE_CORRECTION_FACTOR: 100
+  response: '7E9056210773304'
+- expected_values:
     VOLKSWAGEN_MQB_DQ200_CLUTCH_2_FRICTION_VALUE_CORRECTION_FACTOR: 0
   response: '7E9056210778005'
 - expected_values:
