--- a/tests/test_cases/2021/commands/7E0.22F469|din=03.yaml
+++ b/tests/test_cases/2021/commands/7E0.22F469|din=03.yaml
@@ -26,6 +26,11 @@ test_cases:
     7E8100A62F4693F0001
     7E821FF4F5183555555
 - expected_values:
+    VOLKSWAGEN_PQ35_HIGH_P_EGR_CLOSING_VAR_1: 0
+  response: |-
+    7E8100A62F4693F0003
+    7E821FF7E7E80555555
+- expected_values:
     VOLKSWAGEN_PQ35_HIGH_P_EGR_CLOSING_VAR_1: 12
   response: |-
     7E8100A62F4693F0C0A
