--- a/tests/test_cases/2021/commands/7E0.7E8.221024.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221024.yaml
@@ -10,5 +10,5 @@ test_cases:
     VOLKSWAGEN_MQB_AIR_MASS_1: 76.3
   response: 7E80562102402FB
 - expected_values:
-    VOLKSWAGEN_MQB_AIR_MASS_1: 196
-  response: 7E80562102407A8
+    VOLKSWAGEN_MQB_AIR_MASS_1: 190.8
+  response: '7E8056210240774'
