--- a/tests/test_cases/2021/commands/7E0.7E8.221ABD.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221ABD.yaml
@@ -15,3 +15,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DPF_OIL_ASH_MASS: 23.29706
   response: 7E807621ABD0BA60194
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_OIL_ASH_MASS: 23.3052
+  response: 7E807621ABD0BA70C1F
