Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E1.7E9.221057.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221057.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_0_POS: 2.44
   response: 7E905621057F400
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_ADAPT_BASIC_CHAR_POINT_0_POS: 2.45
+  response: 7E905621057F500
