--- a/tests/test_cases/2021/commands/7E0.7E8.221814.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221814.yaml
@@ -7,5 +7,5 @@ test_cases:
     VOLKSWAGEN_MQB_EGR_VALVE_2_B1_MASS_I_SPEC: 24.1
   response: 7E80562181400F1
 - expected_values:
-    VOLKSWAGEN_MQB_EGR_VALVE_2_B1_MASS_I_SPEC: 58.7
-  response: 7E805621814024B
+    VOLKSWAGEN_MQB_EGR_VALVE_2_B1_MASS_I_SPEC: 51.8
+  response: '7E8056218140206'
