--- a/tests/test_cases/2021/commands/7E1.7E9.221110.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221110.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_PQ35_WORKING_HOURS: 1763.52
   response: 7E90762111000A7EB12
 - expected_values:
+    VOLKSWAGEN_PQ35_WORKING_HOURS: 1778.06093
+  response: '7E90762111017971313'
+- expected_values:
     VOLKSWAGEN_PQ35_WORKING_HOURS: 1770.56736
   response: 7E9076211102C02FF12
 - expected_values:
