Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E0.2215B8|din=03.yaml
+++ b/tests/test_cases/2021/commands/7E0.2215B8|din=03.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DPF_DIFF_P_DYNAMIC_OFFSET: -4
   response: 7E8056215B8FFFC
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_DIFF_P_DYNAMIC_OFFSET: -3
+  response: 7E8056215B8FFFD
