--- a/tests/test_cases/2021/commands/7E0.7E8.221116.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221116.yaml
@@ -10,5 +10,5 @@ test_cases:
     VOLKSWAGEN_PQ35_COOL_FAN_1_DUTY: 28.12
   response: 7E8056211160AFC
 - expected_values:
-    VOLKSWAGEN_PQ35_COOL_FAN_1_DUTY: 46.48
-  response: '7E8056211161228'
+    VOLKSWAGEN_PQ35_COOL_FAN_1_DUTY: 58.59
+  response: 7E80562111616E3
