--- a/tests/test_cases/2021/commands/7E0.7E8.221AC4.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221AC4.yaml
@@ -7,6 +7,12 @@ test_cases:
     VOLKSWAGEN_MQB_DPF_SERVICE_REGEN_I_DURATION: 49.28
   response: 7E805621AC4004D
 - expected_values:
+    VOLKSWAGEN_MQB_DPF_SERVICE_REGEN_I_DURATION: 65.28
+  response: 7E805621AC40066
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_SERVICE_REGEN_I_DURATION: 248.32
+  response: 7E805621AC40184
+- expected_values:
     VOLKSWAGEN_MQB_DPF_SERVICE_REGEN_I_DURATION: 446.72
   response: 7E805621AC402BA
 - expected_values:
