--- a/tests/test_cases/2021/commands/714.77E.222211|fc=1.yaml
+++ b/tests/test_cases/2021/commands/714.77E.222211|fc=1.yaml
@@ -4,5 +4,5 @@ test_cases:
     VOLKSWAGEN_PQ35_CHG_AIR_P: 0
   response: '77E0462221100'
 - expected_values:
-    VOLKSWAGEN_PQ35_CHG_AIR_P: 28.62745
-  response: '77E0462221149'
+    VOLKSWAGEN_PQ35_CHG_AIR_P: 29.41176
+  response: 77E046222114B
