--- a/tests/test_cases/2021/commands/7E0.7E8.221AD4.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221AD4.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_MQB_DPF_REGEN_STATUS: 0
   response: 7E805621AD40000
 - expected_values:
+    VOLKSWAGEN_MQB_DPF_REGEN_STATUS: 135
+  response: 7E805621AD40087
+- expected_values:
     VOLKSWAGEN_MQB_DPF_REGEN_STATUS: 515
   response: 7E805621AD40203
 - expected_values:
