--- a/tests/test_cases/2021/commands/7E1.7E9.223803.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223803.yaml
@@ -1,6 +1,12 @@
 command_id: 7E1.7E9.223803
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_BRAKE_P: 2.7
+  response: 7E9056238030E01
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_BRAKE_P: 5.7
+  response: 7E9056238033A02
+- expected_values:
     VOLKSWAGEN_MQB_TCM_BRAKE_P: 8.4
   response: '7E9056238034803'
 - expected_values:
