--- a/tests/test_cases/2021/commands/7E0.7E8.2210D8.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210D8.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_INJ_4_RAIL_P_2: 0.0116
   response: 7E8056210D800E8
+- expected_values:
+    VOLKSWAGEN_PQ35_INJ_4_RAIL_P_2: 0.0124
+  response: 7E8056210D800F8
