--- a/tests/test_cases/2021/commands/7E0.7E8.2210DF.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210DF.yaml
@@ -4,5 +4,8 @@ test_cases:
     VOLKSWAGEN_PQ35_INJ_2_RAIL_P_3: 0.004
   response: 7E8056210DF0050
 - expected_values:
+    VOLKSWAGEN_PQ35_INJ_2_RAIL_P_3: 0.0044
+  response: 7E8056210DF0058
+- expected_values:
     VOLKSWAGEN_PQ35_INJ_2_RAIL_P_3: 0.0052
   response: 7E8056210DF0068
