--- a/tests/test_cases/2021/commands/7E0.7E8.22111F.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22111F.yaml
@@ -7,6 +7,9 @@ test_cases:
     VOLKSWAGEN_PQ35_PREHEAT_T: 1200
   response: 7E80562111F000C
 - expected_values:
+    VOLKSWAGEN_PQ35_PREHEAT_T: 1400
+  response: 7E80562111F000E
+- expected_values:
     VOLKSWAGEN_PQ35_PREHEAT_T: 1500
   response: 7E80562111F000F
 - expected_values:
