--- a/tests/test_cases/2021/commands/7E0.7E8.2211B2.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2211B2.yaml
@@ -7,6 +7,9 @@ test_cases:
     VOLKSWAGEN_PQ35_DPF_IN_T: 78.5
   response: 7E8056211B20DBC
 - expected_values:
+    VOLKSWAGEN_PQ35_DPF_IN_T: 213.5
+  response: 7E8056211B21302
+- expected_values:
     VOLKSWAGEN_PQ35_DPF_IN_T: 289.6
   response: 7E8056211B215FB
 - expected_values:
