--- a/tests/test_cases/2021/commands/7E0.7E8.221AD2.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221AD2.yaml
@@ -13,5 +13,8 @@ test_cases:
     VOLKSWAGEN_MQB_DPF_REGEN_RELEASE_REQUIREMENT: 7
   response: 7E804621AD207
 - expected_values:
+    VOLKSWAGEN_MQB_DPF_REGEN_RELEASE_REQUIREMENT: 8
+  response: 7E804621AD208
+- expected_values:
     VOLKSWAGEN_MQB_DPF_REGEN_RELEASE_REQUIREMENT: 9
   response: 7E804621AD209
