--- a/tests/test_cases/2021/commands/7E1.7E9.221062.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221062.yaml
@@ -14,6 +14,9 @@ test_cases:
   response: 7E9056210628A09
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_FRICTION_VALUE_CORRECTION_FACTOR: 100
+  response: 7E905621062B005
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_FRICTION_VALUE_CORRECTION_FACTOR: 100
   response: 7E905621062C707
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_FRICTION_VALUE_CORRECTION_FACTOR: 100
