--- a/tests/test_cases/2021/commands/7E1.7E9.223823.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223823.yaml
@@ -7,5 +7,8 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_CMD: 25
   response: 7E905623823C409
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_CMD: 2.1
+  response: 7E905623823D200
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_CMD: 2.5
   response: 7E905623823FA00
