Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E0.7E8.2210D1.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210D1.yaml
@@ -6,3 +6,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_INJ_3_RAIL_P_1: 0.0384
   response: 7E8056210D10300
+- expected_values:
+    VOLKSWAGEN_PQ35_INJ_3_RAIL_P_1: 0.0396
+  response: 7E8056210D10318
+- expected_values:
+    VOLKSWAGEN_PQ35_INJ_3_RAIL_P_1: 0.0408
+  response: 7E8056210D10330
