--- a/tests/test_cases/2021/commands/7E0.7E8.221024.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221024.yaml
@@ -4,8 +4,8 @@ test_cases:
     VOLKSWAGEN_MQB_AIR_MASS_1: 0
   response: '7E8056210240000'
 - expected_values:
-    VOLKSWAGEN_MQB_AIR_MASS_1: 30.6
-  response: '7E8056210240132'
+    VOLKSWAGEN_MQB_AIR_MASS_1: 28.6
+  response: 7E805621024011E
 - expected_values:
     VOLKSWAGEN_MQB_AIR_MASS_1: 76.3
   response: 7E80562102402FB
