--- a/tests/test_cases/2021/commands/7E1.7E9.223803.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223803.yaml
@@ -16,6 +16,9 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_BRAKE_P: 6
   response: '7E9056238035802'
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_BRAKE_P: 8.7
+  response: '7E9056238036603'
+- expected_values:
     VOLKSWAGEN_MQB_TCM_BRAKE_P: 6.6
   response: '7E9056238039402'
 - expected_values:
