--- a/tests/test_cases/2021/commands/7E0.7E8.2210D3.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210D3.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_PQ35_INJ_2_RAIL_P_1: 0.0172
   response: 7E8056210D30158
 - expected_values:
+    VOLKSWAGEN_PQ35_INJ_2_RAIL_P_1: 0.0308
+  response: 7E8056210D30268
+- expected_values:
     VOLKSWAGEN_PQ35_INJ_2_RAIL_P_1: 0.0332
   response: 7E8056210D30298
 - expected_values:
