--- a/tests/test_cases/2021/commands/7E0.7E8.2210D9.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210D9.yaml
@@ -4,5 +4,8 @@ test_cases:
     VOLKSWAGEN_PQ35_INJ_2_RAIL_P_2: 0.0024
   response: 7E8056210D90030
 - expected_values:
+    VOLKSWAGEN_PQ35_INJ_2_RAIL_P_2: 0.0028
+  response: 7E8056210D90038
+- expected_values:
     VOLKSWAGEN_PQ35_INJ_2_RAIL_P_2: 0.0036
   response: 7E8056210D90048
