--- a/tests/test_cases/2021/commands/7E1.7E9.221019.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221019.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_DRIVING_STRATEGY_SPORT_FACTOR: 20
   response: '7E90462101903'
+- expected_values:
+    VOLKSWAGEN_PQ35_DRIVING_STRATEGY_SPORT_FACTOR: 33.33333
+  response: '7E90462101905'
