--- a/tests/test_cases/2021/commands/7E0.7E8.2210DC.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210DC.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_INJ_1_RAIL_P_3: 0.0056
   response: 7E8056210DC0070
+- expected_values:
+    VOLKSWAGEN_PQ35_INJ_1_RAIL_P_3: 0.006
+  response: 7E8056210DC0078
