--- a/tests/test_cases/2021/commands/7E1.7E9.221062.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221062.yaml
@@ -27,3 +27,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_1_FRICTION_VALUE_CORRECTION_FACTOR: 100
   response: 7E905621062C905
+- expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_1_FRICTION_VALUE_CORRECTION_FACTOR: 100
+  response: 7E905621062E60A
