--- a/tests/test_cases/2021/commands/7E1.7E9.222110.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.222110.yaml
@@ -7,8 +7,8 @@ test_cases:
     VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 26710
   response: '7E9056221106856'
 - expected_values:
-    VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 58370
-  response: 7E905622110E402
+    VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 35073
+  response: '7E9056221108901'
 - expected_values:
     VOLKSWAGEN_SPEC_TORQUE_TRANSINT: 64595
   response: 7E905622110FC53
