--- a/tests/test_cases/2021/commands/7E0.7E8.221AC0.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221AC0.yaml
@@ -12,3 +12,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DPF_REGEN_TIME_COUNTER: 467.2
   response: 7E805621AC002DA
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_REGEN_TIME_COUNTER: 698.24
+  response: 7E805621AC00443
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_REGEN_TIME_COUNTER: 860.8
+  response: 7E805621AC00541
