--- a/tests/test_cases/2021/commands/7E0.7E8.221AC4.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221AC4.yaml
@@ -18,3 +18,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DPF_SERVICE_REGEN_I_DURATION: 619.52
   response: 7E805621AC403C8
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_SERVICE_REGEN_I_DURATION: 739.84
+  response: 7E805621AC40484
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_SERVICE_REGEN_I_DURATION: 894.72
+  response: 7E805621AC40576
