--- a/tests/test_cases/2021/commands/7E0.7E8.221ACE.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221ACE.yaml
@@ -15,3 +15,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DPF_STATISTICS_REGEN_TIME_SLICE_NOT_POSS_IN_CHARGE_CYCLE: 0.28122
   response: 7E804621ACE90
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_STATISTICS_REGEN_TIME_SLICE_NOT_POSS_IN_CHARGE_CYCLE: 0.34372
+  response: 7E804621ACEB0
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_STATISTICS_REGEN_TIME_SLICE_NOT_POSS_IN_CHARGE_CYCLE: 0.37496
+  response: 7E804621ACEC0
