--- a/tests/test_cases/2021/commands/7E0.7E8.221AD7.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221AD7.yaml
@@ -4,8 +4,14 @@ test_cases:
     VOLKSWAGEN_MQB_EXH_TEMP_CTRL_AFTER_CAT_MODEL_ERR: -46.6
   response: 7E805621AD708D9
 - expected_values:
+    VOLKSWAGEN_MQB_EXH_TEMP_CTRL_AFTER_CAT_MODEL_ERR: -42.9
+  response: 7E805621AD708FE
+- expected_values:
     VOLKSWAGEN_MQB_EXH_TEMP_CTRL_AFTER_CAT_MODEL_ERR: -40.1
   response: 7E805621AD7091A
+- expected_values:
+    VOLKSWAGEN_MQB_EXH_TEMP_CTRL_AFTER_CAT_MODEL_ERR: -35.5
+  response: 7E805621AD70948
 - expected_values:
     VOLKSWAGEN_MQB_EXH_TEMP_CTRL_AFTER_CAT_MODEL_ERR: -30
   response: 7E805621AD7097F
