--- a/tests/test_cases/2021/commands/7E0.7E8.221ACC.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221ACC.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DPF_STATISTICS_AVERAGE_DRIVE_CYCLE_TIME_DURING_CHARGE_CYCLE: 512
   response: 7E804621ACC20
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_STATISTICS_AVERAGE_DRIVE_CYCLE_TIME_DURING_CHARGE_CYCLE: 768
+  response: 7E804621ACC30
