--- a/tests/test_cases/2021/commands/7E0.7E8.221AD2.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221AD2.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_MQB_DPF_REGEN_RELEASE_REQUIREMENT: 0
   response: 7E804621AD200
 - expected_values:
+    VOLKSWAGEN_MQB_DPF_REGEN_RELEASE_REQUIREMENT: 3
+  response: 7E804621AD203
+- expected_values:
     VOLKSWAGEN_MQB_DPF_REGEN_RELEASE_REQUIREMENT: 4
   response: 7E804621AD204
 - expected_values:
