--- a/tests/test_cases/2021/commands/7E0.7E8.221AD4.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221AD4.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DPF_REGEN_STATUS: 647
   response: 7E805621AD40287
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_REGEN_STATUS: 655
+  response: 7E805621AD4028F
