Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E0.7E8.221ACE.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221ACE.yaml
@@ -13,6 +13,9 @@ test_cases:
     VOLKSWAGEN_MQB_DPF_STATISTICS_REGEN_TIME_SLICE_NOT_POSS_IN_CHARGE_CYCLE: 0.21873
   response: 7E804621ACE70
 - expected_values:
+    VOLKSWAGEN_MQB_DPF_STATISTICS_REGEN_TIME_SLICE_NOT_POSS_IN_CHARGE_CYCLE: 0.24998
+  response: 7E804621ACE80
+- expected_values:
     VOLKSWAGEN_MQB_DPF_STATISTICS_REGEN_TIME_SLICE_NOT_POSS_IN_CHARGE_CYCLE: 0.28122
   response: 7E804621ACE90
 - expected_values:
