--- a/tests/test_cases/2021/commands/7E0.7E8.221AC0.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221AC0.yaml
@@ -18,3 +18,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DPF_REGEN_TIME_COUNTER: 860.8
   response: 7E805621AC00541
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_REGEN_TIME_COUNTER: 1232
+  response: 7E805621AC00785
