--- a/tests/test_cases/2021/commands/7E0.7E8.221ACC.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221ACC.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DPF_STATISTICS_AVERAGE_DRIVE_CYCLE_TIME_DURING_CHARGE_CYCLE: 768
   response: 7E804621ACC30
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_STATISTICS_AVERAGE_DRIVE_CYCLE_TIME_DURING_CHARGE_CYCLE: 1024
+  response: 7E804621ACC40
