--- a/tests/test_cases/2021/commands/7E0.7E8.221ACD.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221ACD.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_DPF_STATISTICS_REGEN_TIME: 512
   response: 7E804621ACD08
+- expected_values:
+    VOLKSWAGEN_MQB_DPF_STATISTICS_REGEN_TIME: 1024
+  response: 7E804621ACD10
