Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E0.7E8.221148.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221148.yaml
@@ -13,6 +13,6 @@ test_cases:
     VOLKSWAGEN_PQ35_FUEL_METER: 38.4
   response: 7E8056211480F00
 - expected_values:
-    VOLKSWAGEN_MISFIRES_1000REV_C3: 4388
-    VOLKSWAGEN_PQ35_FUEL_METER: 43.88
-  response: '7E8056211481124'
+    VOLKSWAGEN_MISFIRES_1000REV_C3: 5055
+    VOLKSWAGEN_PQ35_FUEL_METER: 50.55
+  response: 7E80562114813BF
