Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E0.7E8.2210DE.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210DE.yaml
@@ -10,5 +10,8 @@ test_cases:
     VOLKSWAGEN_PQ35_INJ_4_RAIL_P_3: 0.0072
   response: 7E8056210DE0090
 - expected_values:
+    VOLKSWAGEN_PQ35_INJ_4_RAIL_P_3: 0.0076
+  response: 7E8056210DE0098
+- expected_values:
     VOLKSWAGEN_PQ35_INJ_4_RAIL_P_3: 0.0088
   response: 7E8056210DE00B0
