--- a/tests/test_cases/2021/commands/7E0.7E8.2210D6.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210D6.yaml
@@ -10,5 +10,8 @@ test_cases:
     VOLKSWAGEN_PQ35_INJ_1_RAIL_P_2: 0.0116
   response: 7E8056210D600E8
 - expected_values:
+    VOLKSWAGEN_PQ35_INJ_1_RAIL_P_2: 0.012
+  response: 7E8056210D600F0
+- expected_values:
     VOLKSWAGEN_PQ35_INJ_1_RAIL_P_2: 0.0124
   response: 7E8056210D600F8
