--- a/tests/test_cases/2021/commands/7E1.7E9.22382E.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.22382E.yaml
@@ -1,6 +1,9 @@
 command_id: 7E1.7E9.22382E
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_1: 25.6
+  response: 7E90562382E0002
+- expected_values:
     VOLKSWAGEN_MQB_DQ250_SPECIFIED_TORQUE_CLUTCH_1: 0
   response: 7E90562382E10FF
 - expected_values:
