Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E1.7E9.223827.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223827.yaml
@@ -1,11 +1,8 @@
 command_id: 7E1.7E9.223827
 test_cases:
 - expected_values:
-    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_ACTUAL: 384
-  response: 7E905623827000F
-- expected_values:
-    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_ACTUAL: 346
-  response: 7E905623827840D
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_ACTUAL: 0
+  response: '7E9056238270000'
 - expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_1_VALVE_I_ACTUAL: 1198
   response: 7E905623827CC2E
