--- a/tests/test_cases/2021/commands/7E0.7E8.2210D9.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210D9.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_INJ_2_RAIL_P_2: 0.0036
   response: 7E8056210D90048
+- expected_values:
+    VOLKSWAGEN_PQ35_INJ_2_RAIL_P_2: 0.004
+  response: 7E8056210D90050
