--- a/tests/test_cases/2021/commands/7E1.7E9.221009.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221009.yaml
@@ -4,8 +4,8 @@ test_cases:
     VOLKSWAGEN_MQB_DQ250_SPD_OUTPUT: 0
   response: '7E9056210090000'
 - expected_values:
-    VOLKSWAGEN_MQB_DQ250_SPD_OUTPUT: 526
-  response: 7E9056210090E02
+    VOLKSWAGEN_MQB_DQ250_SPD_OUTPUT: 513
+  response: '7E9056210090102'
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_SPD_OUTPUT: 254
   response: 7E905621009FE00
