--- a/tests/test_cases/2021/commands/7E1.7E9.223834.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223834.yaml
@@ -1,14 +1,11 @@
 command_id: 7E1.7E9.223834
 test_cases:
 - expected_values:
-    VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_SPECIFIED: 384.1
-  response: 7E905623834010F
+    VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_SPECIFIED: 0
+  response: '7E9056238340000'
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_SPECIFIED: 671.7
   response: 7E9056238343D1A
-- expected_values:
-    VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_SPECIFIED: 50
-  response: 7E905623834F401
 - expected_values:
     VOLKSWAGEN_MQB_DQ250_CLUTCH_1_VALVE_I_SPECIFIED: 409
   response: 7E905623834FA0F
