--- a/tests/test_cases/2021/commands/7E1.7E9.2238EA.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.2238EA.yaml
@@ -4,5 +4,8 @@ test_cases:
     VOLKSWAGEN_PQ35_CLUTCH_2_ACTUAL_P: 0
   response: 7E9056238EA0000
 - expected_values:
+    VOLKSWAGEN_PQ35_CLUTCH_2_ACTUAL_P: 2.55
+  response: 7E9056238EAFF00
+- expected_values:
     VOLKSWAGEN_PQ35_CLUTCH_2_ACTUAL_P: -0.01
   response: 7E9056238EAFFFF
