Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E1.7E9.221018.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221018.yaml
@@ -7,5 +7,8 @@ test_cases:
     VOLKSWAGEN_PQ35_DRIVING_STRATEGY_MOUNTAIN_FACTOR: 1.56863
   response: '7E90462101804'
 - expected_values:
+    VOLKSWAGEN_PQ35_DRIVING_STRATEGY_MOUNTAIN_FACTOR: 2.35294
+  response: '7E90462101806'
+- expected_values:
     VOLKSWAGEN_PQ35_DRIVING_STRATEGY_MOUNTAIN_FACTOR: 34.11765
   response: '7E90462101857'
