--- a/tests/test_cases/2021/commands/7E0.7E8.2210D1.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210D1.yaml
@@ -7,6 +7,9 @@ test_cases:
     VOLKSWAGEN_PQ35_INJ_3_RAIL_P_1: 0.0384
   response: 7E8056210D10300
 - expected_values:
+    VOLKSWAGEN_PQ35_INJ_3_RAIL_P_1: 0.0392
+  response: 7E8056210D10310
+- expected_values:
     VOLKSWAGEN_PQ35_INJ_3_RAIL_P_1: 0.0396
   response: 7E8056210D10318
 - expected_values:
