--- a/tests/test_cases/2021/commands/7E0.7E8.2210E4.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210E4.yaml
@@ -4,5 +4,8 @@ test_cases:
     VOLKSWAGEN_PQ35_REG_FACTOR: 0.8027
   response: 7E8056210E41F5B
 - expected_values:
+    VOLKSWAGEN_PQ35_REG_FACTOR: 0.8086
+  response: 7E8056210E41F96
+- expected_values:
     VOLKSWAGEN_PQ35_REG_FACTOR: 0.8192
   response: 7E8056210E42000
