--- a/tests/test_cases/2021/commands/7E1.7E9.221019.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.221019.yaml
@@ -15,3 +15,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_DRIVING_STRATEGY_SPORT_FACTOR: 33.33333
   response: '7E90462101905'
+- expected_values:
+    VOLKSWAGEN_PQ35_DRIVING_STRATEGY_SPORT_FACTOR: 53.33333
+  response: '7E90462101908'
