--- a/tests/test_cases/2021/commands/7E0.7E8.2210D2.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210D2.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_PQ35_INJ_3_RAIL_P_2: 0.0444
   response: 7E8056210D20378
 - expected_values:
+    VOLKSWAGEN_PQ35_INJ_3_RAIL_P_2: 0.048
+  response: 7E8056210D203C0
+- expected_values:
     VOLKSWAGEN_PQ35_INJ_3_RAIL_P_2: 0.0484
   response: 7E8056210D203C8
 - expected_values:
