Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E1.7E9.223823.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223823.yaml
@@ -10,5 +10,8 @@ test_cases:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_CMD: 2.1
   response: 7E905623823D200
 - expected_values:
+    VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_CMD: 7.43
+  response: 7E905623823E702
+- expected_values:
     VOLKSWAGEN_MQB_TCM_TRANSMISSION_PART_2_P_CMD: 2.5
   response: 7E905623823FA00
